tests/baselines/reference/parser509668.errors.txt
parser509668.ts(3,16): error TS1317: A parameter property cannot be declared using a rest parameter.


==== parser509668.ts (1 errors) ====
    class Foo3 {
      // Doesn't work, but should
      constructor (public ...args: string[]) { }
                   ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1317: A parameter property cannot be declared using a rest parameter.
    }